added encode and decode

--- a/RSA/rsa.ipynb
+++ b/RSA/rsa.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c7824005",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
-    "import pycryptodome\n",
     "from Crypto.Cipher import AES\n",
     "from Crypto.Hash import HMAC, SHA256\n",
     "from Crypto.Random import get_random_bytes"
@@ -16,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a8592db4",
    "metadata": {},
    "outputs": [],
@@ -42,12 +41,46 @@
     "        raise ValueError(\"Either file or key must be provided\")\n",
     "    if (file != None) and (key != None):\n",
     "        raise ValueError(\"Only one of file or key can be provided\")\n",
-    "    #TODO: idfk"
+    "    #TODO: idfk\n",
+    "\n",
+    "def encodetext(file: str | None = None,\n",
+    "               text: str | None = None,\n",
+    "               dest: str | None = None):\n",
+    "    if (file == None) and (text == None):\n",
+    "        raise ValueError(\"Either file or text must be provided\")\n",
+    "    if (file != None) and (text != None):\n",
+    "        raise ValueError(\"Only one of file or text can be provided\")\n",
+    "    if file != None:\n",
+    "        textfile = open(file, \"r\")\n",
+    "        text = textfile.read()\n",
+    "        encodetext(text=text)\n",
+    "    if text != None:\n",
+    "        if dest != None:\n",
+    "            with open(dest, \"w\") as file:\n",
+    "                file.write(text.encode(\"ascii\").hex())\n",
+    "        return text.encode(\"ascii\").hex()\n",
+    "\n",
+    "def decodeText(file: str | None = None,\n",
+    "               text: str | None = None,\n",
+    "               dest: str | None = None):\n",
+    "    if (file == None) and (text == None):\n",
+    "        raise ValueError(\"Either file or text must be provided\")\n",
+    "    if (file != None) and (text != None):\n",
+    "        raise ValueError(\"Only one of file or text can be provided\")\n",
+    "    if file != None:\n",
+    "        textfile = open(file, \"r\")\n",
+    "        text = textfile.read()\n",
+    "        decodeText(text=text)\n",
+    "    if text != None:\n",
+    "        if dest != None:\n",
+    "            with open(dest, \"w\") as file:\n",
+    "                file.write(bytes.fromhex(text).decode(\"ascii\"))\n",
+    "        return bytes.fromhex(text).decode(\"ascii\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c9278e3f",
    "metadata": {},
    "outputs": [],
@@ -73,6 +106,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "0e0dd69b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = open(\"data.txt\", \"r\").read()\n",
+    "encodedData = data.encode(\"ascii\").hex()\n",
+    "with open(\"encodeddata.txt\", \"w\") as file:\n",
+    "    file.write(encodedData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9d4f134c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decodedData = bytes.fromhex(encodedData).decode(\"ascii\")\n",
+    "with open(\"decodeddata.txt\", \"w\") as file:\n",
+    "    file.write(decodedData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6a091640",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data == open(\"decodeddata.txt\", \"r\").read()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "9e4c5631",
    "metadata": {},
@@ -90,7 +169,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
