Added information boxes at the top of notebooks in preparation of the addition of CONTRIBUTING.md

--- a/Hash/hashing.ipynb
+++ b/Hash/hashing.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d6eda053",
+   "metadata": {},
+   "source": [
+    "# hashing.ipynb\n",
+    "## Creator: kccaterworld\n",
+    "## Contributors: kccaterworld\n",
+    "### Status: Unfinished, Stable (Techically)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a0dbea16",
