--- a/Caesar/caesar.ipynb
+++ b/Caesar/caesar.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# caesar.ipynb\n",
     "## Creator: kccaterworld\n",
-    "## Contributor(s): kccaterworld, Melody-TG"
+    "## Contributor(s): kccaterworld, Melody-TG\n",
+    "### Status: Status, Improvable"
    ]
   },
   {
